objects/CPQ_User_Story_Item__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPQ Release</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CPQ_Release__c.CPQ_Release__c</field>
                <operation>equals</operation>
                <valueField>CPQ_Release__c.CPQ_Release__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CPQ_Release__c</referenceTo>
        <relationshipLabel>CPQ User Story Items</relationshipLabel>
        <relationshipName>CPQ_User_Story_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_User_Story__c</fullName>
        <label>CPQ User Story</label>
        <referenceTo>CPQ_User_Story__c</referenceTo>
        <relationshipLabel>CPQ User Story Items</relationshipLabel>
        <relationshipName>CPQ_User_Story_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id_field_API_name__c</fullName>
        <label>External Id field API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ids_to_deploy__c</fullName>
        <label>Ids to deploy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DataMigrationOperations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CPQ User Story Item</label>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ User Story Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>